<resources>
    <string name="app_name" translatable="false">Midterm 07570504</string>
    <string name="login_to_your_facebook">Login To Your Facebook</string>
    <string name="email" translatable="false">email</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="add_to_story">Add To Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>
</resources>
